Bleep. Bloop. I am a bot.

--- a/Adding-new-projects-to-wrapdb.html
+++ b/Adding-new-projects-to-wrapdb.html
@@ -223,7 +223,7 @@ git reset --hard
 emacs upstream.wrap meson.build
 &lt;verify that your project builds and runs&gt;
 git add upstream.wrap meson.build
-git commit -a -m 'Created wrap files for libfoo-1.0.0.'
+git commit -a -m 'Create wrap files for libfoo-1.0.0.'
 git push origin 1.0.0
 </code></pre>
 <p>Now you can file a merge request. Remember to file it against branch
