--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -490,7 +490,10 @@ compiler being used:</p>
 </table>
 <p>The default values of <code>c_winlibs</code> and <code>cpp_winlibs</code> are in compiler-specific
 argument forms, but the libraries are: kernel32, user32, gdi32, winspool,
-shell32, ole32, oleaut32, uuid, comdlg32, advapi32</p>
+shell32, ole32, oleaut32, uuid, comdlg32, advapi32.</p>
+<p>c_args, cpp_args, c_link_args, and cpp_link_args only affect native builds,
+when cross compiling they will not be applied to binaries or libraries
+targeting the host system, only those being run on the build system.</p>
 
     </div>
         
