--- a/Gnome-module.html
+++ b/Gnome-module.html
@@ -535,6 +535,9 @@ of the module.</p>
 <li>
 <code>gobject_typesfile</code>: a list of type files</li>
 <li>
+<code>include_directories</code>: extra include paths to pass to <code>gtkdoc-scangobj</code>
+</li>
+<li>
 <code>ignore_headers</code>: a list of header files to ignore</li>
 <li>
 <code>html_assets</code>: a list of assets for the HTML pages</li>
@@ -554,6 +557,8 @@ to the gtk-doc html dir or an absolute path (default: module name)</li>
 <li>
 <code>mkdb_args</code>: a list of arguments to pass to <code>gtkdoc-mkdb</code>
 </li>
+<li>
+<code>module_version</code>: the version of the module, affects the installed location and the devhelp2 file location</li>
 <li>
 <code>scan_args</code>: a list of arguments to pass to <code>gtkdoc-scan</code>
 </li>
