--- a/Qt5-module.html
+++ b/Qt5-module.html
@@ -180,6 +180,8 @@ tools and steps required for Qt. The module has two methods.</p>
 <li>
 <code>moc_extra_arguments</code>, any additional arguments to <code>moc</code> (optional). Available since v0.44.0.</li>
 <li>
+<code>uic_extra_arguments</code>, any additional arguments to <code>uic</code> (optional). Available since v0.49.0.</li>
+<li>
 <code>dependencies</code>, dependency objects needed by moc. Available since v0.48.0.</li>
 </ul>
 <p>It returns an opaque object that should be passed to a main build target.</p>
