--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -821,6 +821,8 @@ argument also accepts the following:</p>
 <li>
 <code>@INPUT@</code>: the full path to the input file</li>
 <li>
+<code>@DEPFILE@</code>: the full path to the depfile</li>
+<li>
 <code>@SOURCE_DIR@</code>: the full path to the root of the source tree</li>
 <li>
 <code>@CURRENT_SOURCE_DIR@</code>: this is the directory where the currently processed meson.build is located in</li>
