--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -312,6 +312,10 @@ set in the cross file.</p>
 <td> 32 bit ARM processor</td>
 </tr>
 <tr>
+<td> arc</td>
+<td> 32 bit ARC processor</td>
+</tr>
+<tr>
 <td> aarch64</td>
 <td> 64 bit ARM processor</td>
 </tr>
