--- a/Reference-tables.html
+++ b/Reference-tables.html
@@ -413,6 +413,10 @@ also check the <code>.endian()</code> value of the machine for this information.
 <td> netbsd</td>
 <td></td>
 </tr>
+<tr>
+<td> gnu</td>
+<td> GNU Hurd</td>
+</tr>
 </tbody>
 </table>
 <p>Any string not listed above is not guaranteed to remain stable in
