--- a/Videos.html
+++ b/Videos.html
@@ -169,6 +169,11 @@ $('body').removeClass('no-script');
         <h1 id="videos">Videos</h1>
 <ul>
 <li>
+<p><a href="https://www.youtube.com/watch?v=SCZLnopmYBM">Compiling Multi-Million Line C++ Code Bases Effortlessly with the
+Meson Build system</a>,
+CppCon 2018</p>
+</li>
+<li>
 <p><a href="https://www.youtube.com/watch?v=gHdTzdXkhRY">The Meson Build System, 4+ years of work to become an overnight
 success</a>, Linux.conf.au 2018</p>
 </li>
