Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -400,6 +400,12 @@ platforms or with all compilers:</p>
 <td> true, false</td>
 <td> Build static libraries as position independent</td>
 </tr>
+<tr>
+<td> b_pie</td>
+<td> false</td>
+<td> true, false</td>
+<td> Build position-independent executables (since 0.49.0)</td>
+</tr>
 </tbody>
 </table>
 <p>The value of <code>b_sanitize</code> can be one of: <code>none</code>, <code>address</code>, <code>thread</code>,
