--- a/Installing.html
+++ b/Installing.html
@@ -181,7 +181,7 @@ the install dir, you can do that with the <code>install_dir</code> argument.</p>
 </code></pre>
 <p>Other install commands are the following.</p>
 <pre><code class="language-meson">install_headers('header.h', subdir : 'projname') # -&gt; include/projname/header.h
-install_man('foo.1') # -&gt; share/man/man1/foo.1.gz
+install_man('foo.1') # -&gt; share/man/man1/foo.1
 install_data('datafile.dat', install_dir : join_paths(get_option('datadir'), 'progname')) # -&gt; share/progname/datafile.dat
 </code></pre>
 <p><code>install_data()</code> supports rename of the file <em>since 0.46.0</em>.</p>
