--- a/Users.html
+++ b/Users.html
@@ -174,7 +174,7 @@ listed in the <a href="https://github.com/topics/meson"><code>meson</code> GitHu
 <a href="https://github.com/tobimensch/aqemu">AQEMU</a>, a Qt GUI for QEMU virtual machines, since version 0.9.3</li>
 <li><a href="https://github.com/jpakkane/mesonarduino">Arduino sample project</a></li>
 <li>
-<a href="https://gitlab.freedesktop.org/bolt/bolt">bolt</a> Userpsace daemon to enable security levels for Thunderbolt™ 3 on Linux</li>
+<a href="https://gitlab.freedesktop.org/bolt/bolt">bolt</a> Userspace daemon to enable security levels for Thunderbolt™ 3 on Linux</li>
 <li>
 <a href="https://github.com/budgie-desktop/budgie-desktop">Budgie Desktop</a>, a desktop environment built on GNOME technologies</li>
 <li>
