--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -711,6 +711,8 @@ in the D programming language</li>
 <code>d_module_versions</code> list of module version identifiers set when compiling D sources</li>
 <li>
 <code>d_debug</code> list of module debug identifiers set when compiling D sources</li>
+<li>
+<code>pie</code> <em>(added 0.49.0)</em> build a position-independent executable</li>
 </ul>
 <p>The list of <code>sources</code>, <code>objects</code>, and <code>dependencies</code> is always
 flattened, which means you can freely nest and add lists while
@@ -991,8 +993,7 @@ An example value could be <code>['rwxr-sr-x', 'root', 'root']</code>.
 <p>Installs the specified man files from the source tree into system's
 man directory during the install step. This directory can be
 overridden by specifying it with the <code>install_dir</code> keyword
-argument. All man pages are compressed during installation and
-installed with a <code>.gz</code> suffix.</p>
+argument.</p>
 <p>The <code>install_mode</code> argument can be used to specify the file mode in symbolic
 format and optionally the owner/uid and group/gid for the installed files.
 An example value could be <code>['rwxr-sr-x', 'root', 'root']</code>.
@@ -1852,7 +1853,7 @@ individually.</p>
 required to find the header or symbol. For example, you might need
 to pass the include path <code>-Isome/path/to/header</code> if a header is not
 in the default include path. In versions newer than 0.38.0 you
-should use the <code>include_directories</code> keyword described above. You
+should use the <code>include_directories</code> keyword described below. You
 may also want to pass a library name <code>-lfoo</code> for <code>has_function</code> to
 check for a function. Supported by all methods except <code>get_id</code>,
 <code>version</code>, and <code>find_library</code>.</p>
@@ -1866,6 +1867,10 @@ searches. <em>(added 0.38.0)</em></p>
 check. Supported by the methods <code>compiles()</code>, <code>links()</code>, and
 <code>run()</code>. If this keyword argument is not passed to those methods, no
 message will be printed about the check.</p>
+</li>
+<li>
+<p><code>no_builtin_args</code> when set to true, the compiler arguments controlled
+by built-in configuration options are not added.</p>
 </li>
 <li>
 <p><code>prefix</code> can be used to add #includes and other things that are
