--- a/Tutorial.html
+++ b/Tutorial.html
@@ -171,6 +171,15 @@ $('body').removeClass('no-script');
 definition for a simple project. Then we expand it to use external
 dependencies to show how easily they can be integrated into your
 project.</p>
+<p>This tutorial has been written mostly for Linux usage. It assumes that
+you have GTK development libraries available on the system. On
+Debian-derived systems such as Ubuntu they can be installed with the
+following command:</p>
+<pre><code>sudo apt install libgtk-3-dev
+</code></pre>
+<p>It is possible to build the GUI application On other platforms such as
+Windows and macOS but it requires for you to install the dependency
+libraries using a dependendy provider of your choice.</p>
 <h2 id="the-humble-beginning">The humble beginning</h2>
 <p>Let's start with the most basic of programs, the classic hello
 example. First we create a file <code>main.c</code> which holds the source. It
