Bleep. Bloop. I am a bot.

--- a/Native-environments.html
+++ b/Native-environments.html
@@ -192,7 +192,7 @@ like <code>llvm-config</code></p>
 c = '/usr/local/bin/clang'
 cpp = '/usr/local/bin/clang++'
 rust = '/usr/local/bin/rust'
-llvm-conifg = '/usr/local/llvm-svn/bin/llvm-config'
+llvm-config = '/usr/local/llvm-svn/bin/llvm-config'
 </code></pre>
 <h2 id="loading-multiple-native-files">Loading multiple native files</h2>
 <p>Unlike cross file, native files allow layering. More than one native file can be
