--- a/Release-notes-for-0-49-0.html
+++ b/Release-notes-for-0-49-0.html
@@ -198,7 +198,8 @@ target specific arguments to the compiler and linker will need to be
 added explicitly from the
 cross-file(<code>c_args</code>/<code>c_link_args</code>/<code>cpp_args</code>/<code>cpp_link_args</code>) or some
 other way.  Refer to the CC-RX User's manual for additional compiler
-and linker options.## CMake <code>find_package</code> dependency backend</p>
+and linker options.</p>
+<h2 id="cmake-find_package-dependency-backend">CMake <code>find_package</code> dependency backend</h2>
 <p>Meson can now use the CMake <code>find_package</code> ecosystem to
 detect dependencies. Both the old-style <code>&lt;NAME&gt;_LIBRARIES</code>
 variables as well as imported targets are supported. Meson
