--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -173,7 +173,8 @@ universal options, base options, compiler options.</p>
 <h2 id="universal-options">Universal options</h2>
 <p>A list of these options can be found by running <code>meson --help</code>. All
 these can be set by passing to <code>meson</code> (aka <code>meson setup</code>) in any of
-these ways: <code>--option=value</code>, <code>--option value</code>, <code>-Doption=value</code>.</p>
+these ways: <code>--option=value</code>, <code>--option value</code>, <code>-Doption=value</code>, or
+by setting them inside <code>default_options</code> of <code>project()</code> in your <code>meson.build</code>.</p>
 <p>They can also be edited after setup using <code>meson configure</code>.</p>
 <p>Installation options are all relative to the prefix, except:</p>
 <ul>
