--- a/Python-module.html
+++ b/Python-module.html
@@ -243,7 +243,7 @@ need to add <code>dependencies : py_installation.dependency()</code>, see <a hre
 <pre><code class="language-meson">void py_installation.install_sources(list_of_files, ...)
 </code></pre>
 <p>Install actual python sources (<code>.py</code>).</p>
-<p>All positional and keyword arguments are the same as for <a href="Reference-manual.html#install-data">install_data</a>,
+<p>All positional and keyword arguments are the same as for <a href="Reference-manual.html#install_data">install_data</a>,
 with the addition of the following:</p>
 <ul>
 <li>
@@ -263,7 +263,7 @@ Defaults to <code>true</code></p>
 </code></pre>
 <p>Retrieve the directory <a href="Python-module.html#install_sources">install_sources()</a> will install to.</p>
 <p>It can be useful in cases where <code>install_sources</code> cannot be used directly,
-for example when using <a href="Reference-manual.html#configure-file">configure_file</a>.</p>
+for example when using <a href="Reference-manual.html#configure_file">configure_file</a>.</p>
 <p>This function accepts no arguments, its keyword arguments are the same
 as <a href="Python-module.html#install_sources">install_sources()</a>.</p>
 <p><strong>Returns</strong>: A string</p>
