--- a/Quick-guide.html
+++ b/Quick-guide.html
@@ -220,7 +220,7 @@ coding.</p>
 used. Meson supports this use case natively. The commands needed to
 build and install Meson projects are the following.</p>
 <pre><code class="language-console">$ cd /path/to/source/root
-$ CFLAGS=... CXXFLAGS=... LDFLAGS=.. meson --prefix /usr --buildtype=plain builddir
+$ meson --prefix /usr --buildtype=plain builddir -Dc_args=... -Dcpp_args=... -Dc_link_args=... -Dcpp_link_args=...
 $ ninja -v -C builddir
 $ ninja -C builddir test
 $ DESTDIR=/path/to/staging/root ninja -C builddir install
