--- a/Reference-manual.html
+++ b/Reference-manual.html
@@ -348,6 +348,12 @@ the <code>@variable@</code> syntax.</li>
 mode, all the variables in the <code>configuration:</code> object (see above)
 are written to the <code>output:</code> file.</li>
 <li>
+<code>install</code> <em>(added 0.50.0)</em> When true, this generated file is installed during
+the install step, and <code>install_dir</code> must be set and not empty. When false, this
+generated file is not installed regardless of the value of <code>install_dir</code>.
+When omitted it defaults to true when <code>install_dir</code> is set and not empty,
+false otherwise.</li>
+<li>
 <code>install_dir</code> the subdirectory to install the generated file to
 (e.g. <code>share/myproject</code>), if omitted or given the value of empty
 string, the file is not installed.</li>
@@ -729,6 +735,9 @@ in the D programming language</li>
 <code>d_debug</code> list of module debug identifiers set when compiling D sources</li>
 <li>
 <code>pie</code> <em>(added 0.49.0)</em> build a position-independent executable</li>
+<li>
+<code>native</code>, is a boolean controlling whether the target is compiled for the
+build or host machines. Defaults to false, building for the host machine.</li>
 </ul>
 <p>The list of <code>sources</code>, <code>objects</code>, and <code>dependencies</code> is always
 flattened, which means you can freely nest and add lists while
@@ -1152,8 +1161,8 @@ them for the default behaviour for each platform.</p>
 <p>The first argument to this function must be a string defining the name
 of this project. It is followed by programming languages that the
 project uses. Supported values for languages are <code>c</code>, <code>cpp</code> (for
-<code>C++</code>), <code>d</code>, <code>objc</code>, <code>objcpp</code>, <code>fortran</code>, <code>java</code>, <code>cs</code> (for <code>C#</code>) and
-<code>vala</code>. In versions before <code>0.40.0</code> you must have at least one
+<code>C++</code>), <code>d</code>, <code>objc</code>, <code>objcpp</code>, <code>fortran</code>, <code>java</code>, <code>cs</code> (for <code>C#</code>),
+<code>vala</code> and <code>rust</code>. In versions before <code>0.40.0</code> you must have at least one
 language listed.</p>
 <p>The project name can be any string you want, it's not used for
 anything except descriptive purposes. However since it is written to
