Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -274,7 +274,7 @@ by setting them inside <code>default_options</code> of <code>project()</code> in
 <td> Build directory layout.</td>
 </tr>
 <tr>
-<td> default-library {shared, static, both}</td>
+<td> default_library {shared, static, both}</td>
 <td> shared</td>
 <td> Default library type.</td>
 </tr>
