--- a/Cross-compilation.html
+++ b/Cross-compilation.html
@@ -296,7 +296,7 @@ binaries are not actually compatible. In such cases you may use the
 <pre><code class="language-ini">[properties]
 needs_exe_wrapper = true
 </code></pre>
-<p>The last bit is the definition of host and target machines. Every
+<p>The next bit is the definition of host and target machines. Every
 cross build definition must have one or both of them. If it had
 neither, the build would not be a cross build but a native build. You
 do not need to define the build machine, as all necessary information
@@ -326,6 +326,15 @@ but with different operating systems.</p>
 <p>If you do not define your host machine, it is assumed to be the build
 machine. Similarly if you do not specify target machine, it is assumed
 to be the host machine.</p>
+<p>Additionally, you can define the paths that you want to install to in your
+cross file. This may be especially useful when cross compiling an entire
+operating system, or for operating systems to use internally for consistency.</p>
+<pre><code class="language-ini">[paths]
+prefix = '/my/prefix'
+libdir = 'lib/i386-linux-gnu'
+bindir = 'bin'
+</code></pre>
+<p>This will be overwritten by any options passed on the command line.</p>
 <h2 id="starting-a-cross-build">Starting a cross build</h2>
 <p>Once you have the cross file, starting a build is simple</p>
 <pre><code class="language-console">$ meson srcdir builddir --cross-file cross_file.txt
