--- a/legal.html
+++ b/legal.html
@@ -167,10 +167,18 @@ $('body').removeClass('no-script');
 	<div id="main">
 				    <div id="page-description" data-hotdoc-source="legal.md" data-hotdoc-role="main">
         <h1 id="legal-information">Legal information</h1>
-<p>Meson is copyrighted by all members of the Meson development team. Meson is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2 license</a>.</p>
+<p>Meson is copyrighted by all members of the Meson development team.
+Meson is licensed under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache 2 license</a>.</p>
 <p>Meson is a registered trademark of Jussi Pakkanen.</p>
+<h2 id="meson-logo-licensing">Meson logo licensing</h2>
+<p>Meson's logo is (C) Jussi Pakkanen and used by the Meson project with
+specific permission. It is not licensed under the same terms as the
+rest of the project.</p>
+<p>If you are a third party and want to use the Meson logo, you must
+first must obtain written permission from Jussi Pakkanen.</p>
 <h2 id="website-licensing">Website licensing</h2>
-<p>The meson website content is released under <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International</a>.</p>
+<p>The meson website content is released under <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+Attribution-ShareAlike 4.0 International</a>.</p>
 <p>All code samples on the website are released under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal</a>.</p>
 
     </div>
