Bleep. Bloop. I am a bot.

--- a/Builtin-options.html
+++ b/Builtin-options.html
@@ -264,9 +264,9 @@ by setting them inside <code>default_options</code> of <code>project()</code> in
 <td> Treat warnings as errors</td>
 </tr>
 <tr>
-<td> warning_level {1, 2, 3}</td>
+<td> warning_level {0, 1, 2, 3}</td>
 <td> 1</td>
-<td> Set the warning level. From 1 = lowest to 3 = highest</td>
+<td> Set the warning level. From 0 = none to 3 = highest</td>
 </tr>
 <tr>
 <td> layout {mirror,flat}</td>
