--- a/Dependencies.html
+++ b/Dependencies.html
@@ -341,6 +341,12 @@ environment variables.</p>
 libraries that have been compiled for single-threaded use instead.</p>
 <h2 id="cups">CUPS</h2>
 <p><code>method</code> may be <code>auto</code>, <code>config-tool</code>, <code>pkg-config</code>, <code>cmake</code> or <code>extraframework</code>.</p>
+<h2 id="fortran-coarrays">Fortran Coarrays</h2>
+<p><em>(added 0.50.0)</em></p>
+<p>Coarrays are a Fortran language intrinsic feature, enabled by
+<code>dependency('coarray')</code>.</p>
+<p>GCC will use OpenCoarrays if present to implement coarrays, while Intel and NAG
+use internal coarray support.</p>
 <h2 id="gl">GL</h2>
 <p>This finds the OpenGL library in a way appropriate to the platform.</p>
 <p><code>method</code> may be <code>auto</code>, <code>pkg-config</code> or <code>system</code>.</p>
@@ -357,6 +363,7 @@ e = executable('testprog', 'test.cc', dependencies : gtest_dep)
 test('gtest test', e)
 </code></pre>
 <h2 id="hdf5">HDF5</h2>
+<p><em>(added 0.50.0)</em></p>
 <p>HDF5 is supported for C, C++ and Fortran. Because dependencies are
 language-specific, you must specify the requested language using the
 <code>language</code> keyword argument, i.e.,</p>
@@ -410,6 +417,20 @@ not provide them, it will search for the standard wrapper executables,
 are not in your path, they can be specified by setting the standard
 environment variables <code>MPICC</code>, <code>MPICXX</code>, <code>MPIFC</code>, <code>MPIF90</code>, or
 <code>MPIF77</code>, during configuration.</p>
+<h2 id="netcdf">NetCDF</h2>
+<p><em>(added 0.50.0)</em></p>
+<p>NetCDF is supported for C, C++ and Fortran. Because NetCDF dependencies are
+language-specific, you must specify the requested language using the
+<code>language</code> keyword argument, i.e.,</p>
+<ul>
+<li>
+<code>dependency('netcdf', language: 'c')</code> for the C NetCDF headers and libraries</li>
+<li>
+<code>dependency('netcdf', language: 'cpp')</code> for the C++ NetCDF headers and libraries</li>
+<li>
+<code>dependency('netcdf', language: 'fortran')</code> for the Fortran NetCDF headers and libraries</li>
+</ul>
+<p>Meson uses pkg-config to find NetCDF.</p>
 <h2 id="openmp">OpenMP</h2>
 <p><em>(added 0.46.0)</em></p>
 <p>This dependency selects the appropriate compiler flags and/or libraries to use
@@ -471,7 +492,7 @@ other than Windows).</p>
 include path of the given module(s) to the compiler flags.  (since v0.47.0)</p>
 <p><strong>Note</strong> using private headers in your project is a bad idea, do so at your own
 risk.</p>
-<p><code>method</code> may be <code>auto</code>, <code>pkgconfig</code> or <code>qmake</code>.</p>
+<p><code>method</code> may be <code>auto</code>, <code>pkg-config</code> or <code>qmake</code>.</p>
 <h2 id="sdl2">SDL2</h2>
 <p>SDL2 can be located using <code>pkg-confg</code>, the <code>sdl2-config</code> config tool, or as an
 OSX framework.</p>
